@@ -1,11 +1,12 @@
 Practice 10-06: Creating and Optimizing a Custom Runtime Image by Using jlink
 
-- Open terminal and navigate to the Hello direcrory, for my case is Prac10_05
+- Open terminal and navigate to the Hello direcrory, for my case is Prac10_06_ModularSystem 
 ``` console
-antw@Mac-mini Prac10_05 % ls
-build		manifest.mf	src
-build.xml	nbproject	test
-antw@Mac-mini Prac10_05 % 
+antw@Mac-mini Prac10_06_ModularSystem % /Library/Java/JavaVirtualMachines/jdk-11.0.8.jdk/Contents/Home/bin/jlink                                                        
+Error: --output must be specified
+Usage: jlink <options> --module-path <modulepath> --add-modules <module>[,<module>...]
+Use --help for a list of possible options
+antw@Mac-mini Prac10_06_ModularSystem % 
 ```
 
 kiv
